istio/websocket-hot-reload/vs-include-v1v2.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat
  namespace: istio-test-ws-chat
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gw-chat
  http:
  - match:
    - uri:
        prefix: /v1
    - uri:
        prefix: /v1/ws
    route:
    - destination:
        port:
          number: 8080
        host: chat-v1
  - match:
    - uri:
        prefix: /v2
    - uri:
        prefix: /v2/ws
    route:
    - destination:
        port:
          number: 8080
        host: chat-v2
